force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Log__c/CHANNEL_ORDERS__Service_Order_Log__c.object-meta.xml
<CustomObject>
    <label>Service Order Log</label>
    <nameField>
        <displayFormat>SOL-{0000}</displayFormat>
        <label>Service Order Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>