force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Log__c/fields/CHANNEL_ORDERS__Attachment__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Attachment__c</fullName>
    <label>Attachment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>