force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Log__c/fields/CHANNEL_ORDERS__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Class_Name__c</fullName>
    <description>Name of class which is creating log</description>
    <inlineHelpText>Name of class which is creating log</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>