force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Log__c/fields/CHANNEL_ORDERS__Log_Detail__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Log_Detail__c</fullName>
    <label>Log Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>