force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Log__c/fields/CHANNEL_ORDERS__Log_Level__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Log_Level__c</fullName>
    <description>Severity level of log(e.g. INFO, WARNING, ERROR)</description>
    <inlineHelpText>Severity level of log(e.g. INFO, WARNING, ERROR)</inlineHelpText>
    <label>Log Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>