force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Log__c/fields/CHANNEL_ORDERS__Module_Name__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Module_Name__c</fullName>
    <description>The name of the module/project/functional area that this functionality belongs to (e.g. Help Portal)</description>
    <inlineHelpText>The name of the module/project/functional area that this functionality belongs to (e.g. Help Portal)</inlineHelpText>
    <label>Module Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>