force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Log__c/fields/CHANNEL_ORDERS__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>CHANNEL_ORDERS__Object_Id__c</fullName>
    <description>Id of the object that the error is related to.</description>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>