force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Log__c/listViews/CHANNEL_ORDERS__All.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CHANNEL_ORDERS__Class_Name__c</columns>
    <columns>CHANNEL_ORDERS__Log_Detail__c</columns>
    <columns>CHANNEL_ORDERS__Object_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>