force-app/main/default/objects/CHANNEL_ORDERS__Service_Order_Log__c/listViews/CHANNEL_ORDERS__All1.listView-meta.xml
<ListView>
    <fullName>CHANNEL_ORDERS__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>